# Krabbs

./: .gitignore  CLION SETUP.md  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: docs.yml  doxygen.yml
arduino/: pompesV1.ino
arduino/encoders/: encoders.ino
arduino/motor_manager/: motor_manager.ino
arduino/pompe_a_vide/: pompe_a_vide.ino
docs/: AX12.md  CLION SETUP.md  Dependencies.md  Doxygen  Doxygen.conf
docs/tutorials/Clion Remote Setup/: CLion Remote Setup.md
include/: config.h  controller.h  odometry.h  point.h
includes/: Config.h
res/: config.info
res/actions/: initialize.as  simpleAX12Test.as
res/strategies/Forward/: main.strategy  moveForward.json
res/strategies/Purple/: main.strategy
res/strategies/Test/: action.json  backward.json  forward.json  main.strategy  turn.json
res/strategies/Yellow/: main.strategy
ressources/: config.info
ressources/fileaction/: BaisserPavillon.as  Fermer2BDeux.as  FermerPince_1D.as  FermerPince_DeuxBouées_D.as  FermerPince_DeuxBouées_G.as  FermerPince_UneBouée_D.as  FermerPince_UneBouée_G.as  HisserPavillon.as  OuvrirPince_D.as  OuvrirPince_G.as  RangerBaguette_D.as  RangerBaguette_G.as  SortirBaguette_D.as  SortirBaguette_G.as
src/: AX12Manager.cpp  AX12Manager.h  ActionManager.cpp  ActionManager.h  Config.h  Controller.cpp  Controller.h  Coordinate.cpp  Coordinate.h  KrabbsInitializer.cpp  KrabbsInitializer.h  Lidar.cpp  Lidar.h  MatchManager.cpp  MatchManager.h  MotionController.cpp  MotionController.h  MotorManager.cpp  MotorManager.h  Odometry.cpp  Odometry.h  PID.cpp  PID.h  Point.cpp  Point.h  PumpsAndValvesManager.cpp  PumpsAndValvesManager.h  ResistanceReader.cpp  ResistanceReader.h  SerialCodeurManager.cpp  Strategy.cpp  Test.h  TestMovement.cpp  TestMovement.h  Trajectory.h  Utils.cpp  Utils.h  config.cpp  configuration.cpp  controller.cpp  (+6 more)
